# M6_G18_260601

./: .gitignore  DIVIDA_TECNICA.md  README.md  SETUP.bat  _compare_outputs.py  _debug_run.py  _test_hc.py  debug_yaml_editor.md  gerar_oe5_preenchido.py  guia_docentes.md  project_tree.md  pyproject.toml  server.py  setup-mac.sh  setup-win.bat  start-mac.sh  start-win.bat  start.bat  test_irc_debug.py  test_yaml_debug.py
.qwen/: settings.json  settings.json.orig
docs/: QWEN_PT2030_UPDATE.md  _INDICE_RELATORIO.md  analise_balanco_coerencia.md  analise_base_hub_vs_sem_hub.md  aplicacoes_financeiras_cp.md  avaliacao_mc_metodologia.md  beneficios_comerciais_hub.md  correcao_irc_taxa_efetiva.md  correcao_plano_financiamento_conformidade.md  dmi_modelacao_inventario.md  extensao_fcf_hub_2030_2034.md  fase2_dmi_consolidado_prompt.md  fcf_modelacao_hub.md  guia_docentes.md  horizonte_10anos_extensao_motor.md  hub_impacto_margem_2025.md  implementacao_T1_T5_resultado.md  metodologia_apv_val_sem_beneficios_fiscais.md  monte_carlo_distribuicoes.md  plano_financiamento_hub.md  plano_implementacao_dividas_covenants.md  plano_restruturacao_frontend_hub.md  pressupostos_sinteticos.md  project_tree.md  quebras_custo_conversao_hub.md  reconciliacao_dfc_correcao.md  revisao_dois_achados_financiamento.md  spec_cup_cozedura_analitico.md
interface/: api.js  app.jsx  charts.jsx  data.js  index.html  views.jsx
m6_markdowns/: 00_introducao.md  01_sumario_executivo.md  02_objetivos_ideia_inovadora.md  03_posicionamento_estrategico.md  04_plano_acao.md  05_gestao_controlo.md  12_conclusao.md  (+15 more)
(+153 files in other folders)
