[project]
name = "m6-g18-260601"
version = "0.9.9"
description = "Modelo financeiro Grestel — M6 G18"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pyyaml>=6.0,<7.0",
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<3.0",
    "openpyxl>=3.1,<4.0",
    "pydantic>=2.0,<3.0",
    "streamlit>=1.35",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
